Fix gap & margin gallery

--- a/src/components/Gallery/_gallery.scss
+++ b/src/components/Gallery/_gallery.scss
@@ -1,7 +1,7 @@
 .card-container{
     max-width: 1240px;
     width: 95%;
-    margin: 20px auto;
+    margin: 50px auto;
     background-color: $grey;
     border-radius: 25px;
 
@@ -15,7 +15,7 @@
         display: grid;
         grid-template-columns: 340px 340px 340px;
         grid-template-rows: 340px;
-        gap: 60px;
+        gap: 50px;
         list-style: none;
         padding: 50px;
 
